--- a/pom.xml
+++ b/pom.xml
@@ -4,25 +4,22 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>com.intel.oap</groupId>
-        <artifactId>oap-parent</artifactId>
-        <version>0.9.0</version>
-        <relativePath>../pom.xml</relativePath>
-    </parent>
-
-    <artifactId>oap-spark</artifactId>
+    <groupId>com.intel.oap</groupId>
+    <artifactId>pmem-spill</artifactId>
+    <version>1.1.0</version>
+    <name>OAP Project PMem Spill</name>
     <packaging>jar</packaging>
-    <name>OAP Project Spark Source Code Change</name>
 
     <properties>
-    <scala.version>2.12.10</scala.version>
-    <scala.binary.version>2.12</scala.binary.version>
-    <spark.internal.version>3.0.0</spark.internal.version>
-    <maven-patch-plugin.version>1.2</maven-patch-plugin.version>
-    <maven-resource-plugin.version>2.6</maven-resource-plugin.version>
-    <jetty.version>9.4.18.v20190429</jetty.version>
-  </properties>
+        <java.version>1.8</java.version>
+        <junit.version>4.12</junit.version>
+        <scala.version>2.12.10</scala.version>
+        <scala.binary.version>2.12</scala.binary.version>
+        <spark.internal.version>3.0.0</spark.internal.version>
+        <maven-patch-plugin.version>1.2</maven-patch-plugin.version>
+        <maven-resource-plugin.version>2.6</maven-resource-plugin.version>
+        <jetty.version>9.4.18.v20190429</jetty.version>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -32,7 +29,7 @@
         </dependency>
         <dependency>
             <groupId>com.intel.oap</groupId>
-            <artifactId>oap-common</artifactId>
+            <artifactId>pmem-common</artifactId>
             <version>${project.version}</version>
             <exclusions>
                 <exclusion>
