--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 
   <groupId>com.intel.oap</groupId>
   <artifactId>pmem-spill-parent</artifactId>
-  <version>1.1.1</version>
+  <version>1.2.0-snapshot</version>
   <name>OAP Project PMem Spill</name>
   <packaging>pom</packaging>
 
