update package version to 1.2.0

--- a/RDD-Cache/pom.xml
+++ b/RDD-Cache/pom.xml
@@ -7,13 +7,13 @@
     <parent>
         <groupId>com.intel.oap</groupId>
         <artifactId>pmem-spill-parent</artifactId>
-        <version>1.2.0-snapshot</version>
+        <version>1.2.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <groupId>com.intel.oap</groupId>
     <artifactId>pmem-rdd-cache</artifactId>
-    <version>1.2.0-snapshot</version>
+    <version>1.2.0</version>
     <name>OAP Project PMem RDD Cache</name>
     <packaging>jar</packaging>
 
