--- a/RDD-Cache/pom.xml
+++ b/RDD-Cache/pom.xml
@@ -25,14 +25,30 @@
         <spark.internal.version>3.1.1</spark.internal.version>
         <maven-patch-plugin.version>1.2</maven-patch-plugin.version>
         <maven-resource-plugin.version>2.6</maven-resource-plugin.version>
-        <jetty.version>9.4.39.v20210325</jetty.version>
+	<jetty.version>9.4.39.v20210325</jetty.version>
+	<log4j.version>2.15.0</log4j.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-core_${scala.binary.version}</artifactId>
-            <version>${spark.internal.version}</version>
+	    <version>${spark.internal.version}</version>
+	    <exclusions>
+              <exclusion>
+                <groupId>log4j</groupId>
+                <artifactId>log4j</artifactId>
+              </exclusion>
+              <exclusion>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-log4j12</artifactId>
+              </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>${log4j.version}</version>
         </dependency>
         <dependency>
             <groupId>com.intel.oap</groupId>
